Fix text color on hover for readability

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,6 +33,7 @@ body {
 
     &:hover {
       background-color: #c40fc7;
+      color: $secondary-text-color;
     }
   }
 
